reduce dependency tree - remove usage if ide-api